--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "echarts": "^4.6.0",
     "element-ui": "^2.4.5",
     "node-sass": "^4.13.0",
+    "nprogress": "^0.2.0",
     "sass-loader": "^8.0.0",
     "socket.io-client": "^2.3.0",
     "vue": "^2.6.10",
@@ -20,7 +21,8 @@
     "vue-router": "^3.1.3",
     "vue-socket.io": "^3.0.7",
     "vue2-editor": "^2.10.2",
-    "vuex": "^3.1.2"
+    "vuex": "^3.1.2",
+    "vuex-persistedstate": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
